packages/typ/tests/fixtures/diagnostics/0933_gadt_witness_branch_return_mismatch_08.ml.expected
File "0933_gadt_witness_branch_return_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0933_gadt_witness_branch_return_mismatch_08 is not a valid module name.

File "0933_gadt_witness_branch_return_mismatch_08.ml", line 6, characters 18-22:
6 |   | WInt_theta -> true
                      ^^^^
Error: This expression should not be a boolean literal, the expected type is
       a
